// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failure cases 1`] = `
Object {
  "error": "hey could not be found in the env.",
  "t": "err",
}
`;

exports[`failure cases 2`] = `
Object {
  "error": "'add' requires two arguments, recieved values: -3",
  "t": "err",
}
`;

exports[`failure cases 3`] = `
Object {
  "error": "'add' requires two arguments, recieved values: foo,3,-3",
  "t": "err",
}
`;

exports[`simple addition 1`] = `
Object {
  "t": "value",
  "value": Object {
    "type": "number",
    "v": 8,
  },
}
`;

exports[`simple addition 2`] = `
Object {
  "t": "value",
  "value": Object {
    "type": "number",
    "v": 2,
  },
}
`;
